--- a/stewart/sdf/stewart/model.sdf.erb
+++ b/stewart/sdf/stewart/model.sdf.erb
@@ -1,26 +1,27 @@
 <?xml version="1.0"?>
 <sdf version="1.5">
 <%
-	BASE_HEIGHT = 0.25
-	BASE_RADIUS = 1.0
+	BASE_HEIGHT = 0.010
+	BASE_RADIUS = 0.075
 	BASE_MASS = 1000.0
 
-	PLATFORM_HEIGHT = 0.1
-	PLATFORM_RADIUS = BASE_RADIUS
+	PLATFORM_HEIGHT = 0.008
+	PLATFORM_RADIUS = 0.075
 	PLATFORM_MASS = 1.0
 
-	BALL_RADIUS = 0.1
 
-	BASE_PLATFORM_DISTANCE = 2
+
+	BASE_PLATFORM_DISTANCE = 0.2
 	
-	PISTON_RADIUS = BALL_RADIUS
+	PISTON_RADIUS = 0.008
+	BALL_RADIUS = PISTON_RADIUS
 
 	BALL_DTC = Math.sqrt(BASE_RADIUS**2-4*BASE_RADIUS*BALL_RADIUS+5*BALL_RADIUS**2)
 	BALL_SEPARATION = Math.sqrt(2*BALL_DTC**2-2*BALL_DTC**2*Math.cos(1.047-2*Math.asin(BALL_RADIUS/(BASE_RADIUS-2*BALL_RADIUS))))
 	DISTANCE_TO_MIDPOINT = Math.sqrt(BALL_DTC**2-(0.5*BALL_SEPARATION)**2)
 
-	PISTON_PITCH_ANGLE = 1.571-Math.atan((BASE_PLATFORM_DISTANCE-0.5*BASE_HEIGHT-0.5*PLATFORM_HEIGHT)/BALL_SEPARATION)
-	PISTON_YAW_ANGLE = 1.571-(0.5*(3.142-(1.047-2*Math.asin(BALL_RADIUS/(BASE_RADIUS-2*BALL_RADIUS))))-Math.asin(BALL_RADIUS/(BASE_RADIUS-2*BALL_RADIUS)))
+	PISTON_PITCH_ANGLE = 0
+	PISTON_YAW_ANGLE = 0
 
 	PISTON_LENGTH = Math.sqrt((BASE_PLATFORM_DISTANCE-0.5*BASE_HEIGHT-0.5*PLATFORM_HEIGHT)**2+BALL_SEPARATION**2)
 %>												
@@ -441,7 +442,7 @@
 	</link>
 
 	<link name = "top_ball1_link" >
-		<pose> <%= BALL_DTC*Math.cos(2.618-Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(2.618-Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*BASE_HEIGHT+BASE_PLATFORM_DISTANCE-0.5*PLATFORM_HEIGHT %> 0 0 <%= 1.571+PISTON_YAW_ANGLE %> </pose>
+		<pose> <%= BALL_DTC*Math.cos(1.571+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(1.571+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*BASE_HEIGHT+BASE_PLATFORM_DISTANCE-0.5*PLATFORM_HEIGHT %> 0 0 <%= 1.571+PISTON_YAW_ANGLE %> </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
@@ -472,7 +473,7 @@
 	</link>
 
 	<link name = "top_ball3_link" >
-		<pose> <%= BALL_DTC*Math.cos(0.524-Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(0.524-Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*BASE_HEIGHT+BASE_PLATFORM_DISTANCE-0.5*PLATFORM_HEIGHT %> 0 0 0 </pose>
+		<pose> <%= BALL_DTC*Math.cos(-0.524+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(-0.524+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*BASE_HEIGHT+BASE_PLATFORM_DISTANCE-0.5*PLATFORM_HEIGHT %> 0 0 0 </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
@@ -503,7 +504,7 @@
 	</link>
 
 	<link name = "top_ball5_link" >
-		<pose> <%= BALL_DTC*Math.cos(4.712-Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(4.712-Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*BASE_HEIGHT+BASE_PLATFORM_DISTANCE-0.5*PLATFORM_HEIGHT %> 0 0 <%= -1.571-PISTON_YAW_ANGLE %> </pose>
+		<pose> <%= BALL_DTC*Math.cos(-2.62+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(-2.62+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*BASE_HEIGHT+BASE_PLATFORM_DISTANCE-0.5*PLATFORM_HEIGHT %> 0 0 <%= -1.571-PISTON_YAW_ANGLE %> </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
@@ -534,7 +535,7 @@
 	</link>
 
 	<link name = "piston1_cylinder_link" >
-		<pose> <%= -DISTANCE_TO_MIDPOINT*Math.sin(0.526) %> <%= DISTANCE_TO_MIDPOINT*Math.cos(0.526) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 <%= 1.571+PISTON_YAW_ANGLE %> </pose>
+		<pose> <%= BALL_DTC*Math.cos(1.571+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(1.571+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 <%= 1.571+PISTON_YAW_ANGLE %> </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
@@ -573,7 +574,7 @@
 	</link>
 
 	<link name = "piston3_cylinder_link" >
-		<pose> <%= DISTANCE_TO_MIDPOINT %> 0 <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 0 </pose>
+		<pose> <%= BALL_DTC*Math.cos(-0.524+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(-0.524+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 0 </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
@@ -613,7 +614,7 @@
 
 
 	<link name = "piston5_cylinder_link" >
-		<pose> <%= DISTANCE_TO_MIDPOINT*Math.cos(2.094) %> <%= -DISTANCE_TO_MIDPOINT*Math.sin(2.094) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 <%= -1.571-PISTON_YAW_ANGLE %> </pose>
+		<pose> <%= BALL_DTC*Math.cos(-2.62+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(-2.62+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 <%= -1.571-PISTON_YAW_ANGLE %> </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
@@ -652,7 +653,7 @@
 	</link>
 
 	<link name = "piston1_shaft_link" >
-		<pose> <%= -DISTANCE_TO_MIDPOINT*Math.sin(0.526) %> <%= DISTANCE_TO_MIDPOINT*Math.cos(0.526) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 <%= 1.571+PISTON_YAW_ANGLE %> </pose>
+		<pose> <%= BALL_DTC*Math.cos(1.571+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(1.571+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 <%= 1.571+PISTON_YAW_ANGLE %> </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
@@ -691,7 +692,7 @@
 	</link>
 
 	<link name = "piston3_shaft_link" >
-		<pose> <%= DISTANCE_TO_MIDPOINT %> 0 <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 0 </pose>
+		<pose> <%= BALL_DTC*Math.cos(-0.524+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(-0.524+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 0 </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
@@ -730,7 +731,7 @@
 	</link>
 
 	<link name = "piston5_shaft_link" >
-		<pose> <%= DISTANCE_TO_MIDPOINT*Math.cos(2.094) %> <%= -DISTANCE_TO_MIDPOINT*Math.sin(2.094) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 <%= -1.571-PISTON_YAW_ANGLE %> </pose>
+		<pose> <%= BALL_DTC*Math.cos(-2.62+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= BALL_DTC*Math.sin(-2.62+Math.asin(PISTON_RADIUS/(BASE_RADIUS-2*PISTON_RADIUS))) %> <%= 0.5*(BASE_HEIGHT+BASE_PLATFORM_DISTANCE) %> <%= -PISTON_PITCH_ANGLE %> 0 <%= -1.571-PISTON_YAW_ANGLE %> </pose>
 		<inertial>
 			<mass> 0.1 </mass>
 			<inertia>
